--- a/templates/src/pages/page-howitworks.hbs
+++ b/templates/src/pages/page-howitworks.hbs
@@ -16,7 +16,7 @@ header_nav_howitworks: true
     <div class="container">
       <div class="content text-center">
         <p class="body-lg"><strong>Real change is a fund for Wigan &amp; Leigh that pays for items that local people need to get off and stay off the street.</strong></p>
-        <a class="button button-primary d-block d-sm-inline-block mb-sm" href="#">Donate and make a real change</a>
+        <a class="button button-primary d-block d-sm-inline-block mb-sm mt-md" href="#">Donate and make a real change</a>
       </div>
     </div>
   </div>
@@ -24,32 +24,39 @@ header_nav_howitworks: true
   <div class="section bg-rc-sunny edge edge-top edge-rc-sunny-top">
     <div class="container">
       <div class="content">
-        <h2>Where does the money go?</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <div class="stats">
-          <div class="stat">
-            <div class="stat-pie">
-              <img alt="85%" src="assets/uploads/stat-pie-85.png">
-            </div>
-            <div class="stat-body">
-              <p><strong class="stat-count">85% </strong> Goes to the individual</p>
+        <div class="howitworks-stats">
+          <div class="howitworks-stats-body">
+            <h2>Where does the money go?</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <div class="stats">
+              <div class="stat">
+                <div class="stat-img">
+                  <img alt="85%" src="assets/uploads/howitworks-stat-85.png">
+                </div>
+                <div class="stat-body">
+                  <p><strong class="stat-count">85% </strong> Goes to the individual</p>
+                </div>
+              </div>
+              <div class="stat">
+                <div class="stat-img">
+                  <img alt="10%" src="assets/uploads/howitworks-stat-10.png">
+                </div>
+                <div class="stat-body">
+                  <p><strong class="stat-count">10% </strong>  Goes to the running of Real Change</p>
+                </div>
+              </div>
+              <div class="stat">
+                <div class="stat-img">
+                  <img alt="5%" src="assets/uploads/howitworks-stat-5.png">
+                </div>
+                <div class="stat-body">
+                  <p><strong class="stat-count">5% </strong> Goes to Just Giving</p>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="stat">
-            <div class="stat-pie">
-              <img alt="10%" src="assets/uploads/stat-pie-10.png">
-            </div>
-            <div class="stat-body">
-              <p><strong class="stat-count">10% </strong>  Goes to the running of Real Change</p>
-            </div>
-          </div>
-          <div class="stat">
-            <div class="stat-pie">
-              <img alt="5%" src="assets/uploads/stat-pie-5.png">
-            </div>
-            <div class="stat-body">
-              <p><strong class="stat-count">5% </strong> Goes to Just Giving</p>
-            </div>
+          <div class="howitworks-stats-media aspect aspect-1by1">
+            <img alt="" src="assets/uploads/howitworks-stats.png">
           </div>
         </div>
       </div>
