--- a/templates/src/_components/stat/_stat.scss
+++ b/templates/src/_components/stat/_stat.scss
@@ -3,30 +3,19 @@
 
 .stat {
   margin-bottom: 1rem;
-  text-align: center;
+  display: flex;
 
   @include media-breakpoint-up(md) {
     margin-bottom: 1.5rem;
   }
 }
 
-.stat-pie {
+.stat-img {
+  margin-right: 0.625rem;
+  
   img {
-    background-color: transparent;
-    border-radius: 50%;
-    height: 140px;
-    margin-bottom: 1rem;
-    width: 140px;
-
-    @include media-breakpoint-up(sm) {
-      height: 154px;
-      width: 154px;
-    }
-
-    @include media-breakpoint-up(md) {
-      height: 174px;
-      width: 174px;
-    }
+    height: 100%;
+    width: 1rem;
   }
 }
 
@@ -48,31 +37,8 @@
 }
 
 .stats {
-  display: flex;
-  flex-wrap: wrap;
+  // display: flex;
+  // flex-wrap: wrap;
   margin-bottom: 2rem;
   margin-top: 2rem;
-
-  @include media-breakpoint-up(sm) {
-    justify-content: center;
-  }
-
-  @include media-breakpoint-up(md) {
-    justify-content: space-between;
-  }
-
-  .stat {
-    flex: 1 1 50%;
-
-    @include media-breakpoint-up(sm) {
-      flex: 1 1 0%;
-    }
-
-    @include media-breakpoint-up(md) {
-      flex: 1 1 33%;
-      margin-bottom: 0;
-      max-width: 33%;
-      min-width: 33%;
-    }
-  }
 }
