--- a/templates/src/css/sass/pages/howitworks.scss
+++ b/templates/src/css/sass/pages/howitworks.scss
@@ -18,6 +18,7 @@
   margin-top: 1rem;
 
   @include media-breakpoint-up(sm) {
+    height: 320px;
     margin-left: 1em;
     margin-top: 0;
     max-width: 320px;
@@ -25,6 +26,7 @@
   }
 
   @include media-breakpoint-up(lg) {
+    height: 420px;
     margin-right: -100px;
     max-width: 420px;
     width: 420px;
