--- a/templates/src/css/sass/_type.scss
+++ b/templates/src/css/sass/_type.scss
@@ -164,7 +164,7 @@ mark,
 }
 
 blockquote {
-  color: $color-rc-candy;
+  color: $color-rc-spark;
   font-size: ($font-size-base * 1.4444444444); // 26px
   font-weight: 300;
   line-height: 1.3076923077; // 34px
