--- a/templates/src/_components/header/_header.scss
+++ b/templates/src/_components/header/_header.scss
@@ -24,12 +24,61 @@
   color: $color-white-sec;
   font-size: $font-size-sm;
   line-height: $line-height-sm;
-  padding-bottom: 1rem;
 
   @include media-breakpoint-up(md) {
     font-size: $font-size-base;
     line-height: $line-height-base;
+  }
+
+  // decor-bottom
+  &::after {
+    z-index: 100;
+  }
+}
+
+.header-wrap {
+  overflow: hidden;
+  padding-bottom: 1rem;
+  position: relative;
+
+  @include media-breakpoint-up(md) {
     padding-bottom: 1.5rem;
+  }
+
+  &::before {
+    background-color: $color-rc-dive;
+    bottom: 0;
+    content: "";
+    display: block;
+    left: 172px;
+    margin-right: -400px;
+    position: absolute;
+    right: 50%;
+    top: 0;
+    transform: skew(-44deg, 0deg);
+    transform-origin: 0 0;
+    user-select: none;
+    z-index: 1;
+
+    @include media-breakpoint-up(sm) {
+      left: 252px;
+      margin-right: 0;
+      right: -152px;
+    }
+
+    @include media-breakpoint-up(md) {
+      margin-left: -52px;
+      left: 50%;
+    }
+    
+    @include media-breakpoint-up(lg) {
+      margin-left: -152px;
+      right: -100px;
+    }
+
+    @include media-breakpoint-up(xl) {
+      right: 0;
+    }
   }
 }
 
@@ -39,6 +88,8 @@
   flex-wrap: wrap;
   max-width: 1024px;
   overflow: hidden;
+  position: relative;
+  z-index: 100;
 }
 
 .header-brand {
@@ -113,7 +164,6 @@
   padding-top: 1.125rem;
 
   @include media-breakpoint-down(sm) {
-    // background-color: red;
     flex: 1 1 0%;
     text-align: right;
   }
@@ -185,7 +235,6 @@
     }
 
     a {
-      // font-family: $button-font-family;
       font-size: $font-size-base;
       line-height: 1.1111111111;
       padding: 0.1875rem 0.75rem;
@@ -205,7 +254,7 @@
 
 .header-hero {
   flex: 1 0 100%;
-  padding: 1rem 2rem 2rem;
+  padding: 1rem 3rem 2rem;
   order: 4;
   text-align: center;
 
@@ -219,7 +268,6 @@
 }
 
 .header-hero-title {
-  // background-color: $color-rc-dive;
   font-size: 40px;
   line-height: 1;
   margin-bottom: 0;
@@ -240,6 +288,8 @@
 
   strong {
     display: block;
+    // margin-left: -1rem;
+    // margin-right: -1rem;
     font-size: 58px;
   
     @include media-breakpoint-up(md) {
