--- a/templates/src/css/sass/pages/home.scss
+++ b/templates/src/css/sass/pages/home.scss
@@ -3,8 +3,14 @@
 
 .home-header {
   .header-hero {
-    margin-top: 0;
+    margin-top: -2rem;
     padding-bottom: 2rem;
+
+    @include media-breakpoint-up(sm) {
+      margin-top: -4rem;
+      padding-left: 0;
+      padding-right: 0;
+    }
 
     @include media-breakpoint-up(md) {
       margin-top: -6rem;
