--- a/hugo/assets/realchange.css
+++ b/hugo/assets/realchange.css
@@ -415,11 +415,27 @@ p + .button { margin-top: 1rem; }
 
 .header-skip:active, .header-skip:focus { position: absolute; }
 
-.header { background-color: #FBBF09; background-position: 50% 0; background-repeat: no-repeat; background-size: cover; color: whitesmoke; font-size: 0.875rem; line-height: 1.28571; padding-bottom: 1rem; }
+.header { background-color: #FBBF09; background-position: 50% 0; background-repeat: no-repeat; background-size: cover; color: whitesmoke; font-size: 0.875rem; line-height: 1.28571; }
 
-@media (min-width: 768px) { .header { font-size: 1.125rem; line-height: 1.5; padding-bottom: 1.5rem; } }
+@media (min-width: 768px) { .header { font-size: 1.125rem; line-height: 1.5; } }
 
-.header-inner { max-width: 840px; margin-left: auto; margin-right: auto; width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; max-width: 1024px; overflow: hidden; }
+.header::after { z-index: 100; }
+
+.header-wrap { overflow: hidden; padding-bottom: 1rem; position: relative; }
+
+@media (min-width: 768px) { .header-wrap { padding-bottom: 1.5rem; } }
+
+.header-wrap::before { background-color: #5E71BA; bottom: 0; content: ""; display: block; left: 172px; margin-right: -400px; position: absolute; right: 50%; top: 0; -webkit-transform: skew(-44deg, 0deg); -ms-transform: skew(-44deg, 0deg); transform: skew(-44deg, 0deg); -webkit-transform-origin: 0 0; -ms-transform-origin: 0 0; transform-origin: 0 0; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; z-index: 1; }
+
+@media (min-width: 576px) { .header-wrap::before { left: 252px; margin-right: 0; right: -152px; } }
+
+@media (min-width: 768px) { .header-wrap::before { margin-left: -52px; left: 50%; } }
+
+@media (min-width: 992px) { .header-wrap::before { margin-left: -152px; right: -100px; } }
+
+@media (min-width: 1200px) { .header-wrap::before { right: 0; } }
+
+.header-inner { max-width: 840px; margin-left: auto; margin-right: auto; width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; max-width: 1024px; overflow: hidden; position: relative; z-index: 100; }
 
 .header-brand a { color: #000000; text-decoration: none; }
 
@@ -477,7 +493,7 @@ p + .button { margin-top: 1rem; }
 
 @media (min-width: 768px) { .header-nav .header-nav-donate a { font-size: 1.375rem; padding: 0.375rem 2rem 0.125rem 2rem; } }
 
-.header-hero { -webkit-box-flex: 1; -ms-flex: 1 0 100%; flex: 1 0 100%; padding: 1rem 2rem 2rem; -webkit-box-ordinal-group: 5; -ms-flex-order: 4; order: 4; text-align: center; }
+.header-hero { -webkit-box-flex: 1; -ms-flex: 1 0 100%; flex: 1 0 100%; padding: 1rem 3rem 2rem; -webkit-box-ordinal-group: 5; -ms-flex-order: 4; order: 4; text-align: center; }
 
 @media (min-width: 576px) { .header-hero { margin-top: -3rem; } }
 
@@ -519,7 +535,9 @@ p + .button { margin-top: 1rem; }
 
 @media (min-width: 992px) { .section.edge-top { padding-top: 3.5rem; } }
 
-.home-header .header-hero { margin-top: 0; padding-bottom: 2rem; }
+.home-header .header-hero { margin-top: -2rem; padding-bottom: 2rem; }
+
+@media (min-width: 576px) { .home-header .header-hero { margin-top: -4rem; padding-left: 0; padding-right: 0; } }
 
 @media (min-width: 768px) { .home-header .header-hero { margin-top: -6rem; padding-bottom: 3rem; } }
 
