Footer now CMS controlled

--- a/hugo/layouts/index.html
+++ b/hugo/layouts/index.html
@@ -90,7 +90,8 @@
 
 </div>
 
-{{ partial "footer.html" .Params.footer }}
+{{ $footer := .Site.GetPage "_footer.md" }}
+{{ partial "footer.html" (dict "footer" $footer) }}
 <script>
   if (window.netlifyIdentity) {
     window.netlifyIdentity.on("init", user => {
