--- a/hugo/layouts/section/how-to-apply.html
+++ b/hugo/layouts/section/how-to-apply.html
@@ -25,5 +25,6 @@
 
 </div>
 
-{{ partial "footer.html" .Params.footer }}
+{{ $footer := .Site.GetPage "_footer.md" }}
+{{ partial "footer.html" (dict "footer" $footer) }}
 {{ end }}
