--- a/hugo/layouts/section/how-it-works.html
+++ b/hugo/layouts/section/how-it-works.html
@@ -95,5 +95,6 @@
 
 </div>
 
-{{ partial "footer.html" .Params.footer }}
+{{ $footer := .Site.GetPage "_footer.md" }}
+{{ partial "footer.html" (dict "footer" $footer) }}
 {{ end }}
