--- a/hugo/layouts/section/privacy.html
+++ b/hugo/layouts/section/privacy.html
@@ -26,5 +26,6 @@
 
 </div>
 
-{{ partial "footer.html" .Params.footer }}
+{{ $footer := .Site.GetPage "_footer.md" }}
+{{ partial "footer.html" (dict "footer" $footer) }}
 {{ end }}
