--- a/hugo/layouts/stories/single.html
+++ b/hugo/layouts/stories/single.html
@@ -40,5 +40,6 @@
 
 </div>
 
-{{ partial "footer.html" .Params.footer }}
+{{ $footer := .Site.GetPage "_footer.md" }}
+{{ partial "footer.html" (dict "footer" $footer) }}
 {{ end }}
