--- a/hugo/layouts/stories/stories.html
+++ b/hugo/layouts/stories/stories.html
@@ -41,5 +41,6 @@
 
 </div>
 
-{{ partial "footer.html" .Params.footer }}
+{{ $footer := .Site.GetPage "_footer.md" }}
+{{ partial "footer.html" (dict "footer" $footer) }}
 {{ end }}
