--- a/hugo/assets/realchange.css
+++ b/hugo/assets/realchange.css
@@ -258,7 +258,7 @@ p + .button { margin-top: 1rem; }
 
 .card-header > :last-child, .card-body > :last-child { margin-bottom: 0; }
 
-.card-body { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; }
+.card-body { -webkit-box-flex: 1; -ms-flex: 1 0 auto; flex: 1 0 auto; }
 
 .card-title { font-family: "Barlow Semi Condensed"; font-size: 1.25rem; line-height: 1.3; }
 
