Real Change > Real Help

--- a/templates/src/_layouts/default.hbs
+++ b/templates/src/_layouts/default.hbs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>{{{ title }}} | Real Change</title>
+    <title>{{{ title }}} | Real Help</title>
     {{!-- START: Preload --}}
     <link rel="preload" href="assets/barlowsemicondensed-bold.woff2" as="font" type="font/woff2">
     <link rel="preload" href="assets/barlowsemicondensed-bold.woff" as="font" type="font/woff">
