--- a/templates/src/_layouts/styleguide.hbs
+++ b/templates/src/_layouts/styleguide.hbs
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>{{{ title }}} | Real Change</title>
+    <title>{{{ title }}} | Real Help</title>
     <link href="{{ project.shortname }}.css" rel="stylesheet">
     <link href="{{ project.shortname }}.styleguide.css" rel="stylesheet">
   </head>
   <body{{#if body_classes}} class="{{ body_classes }}"{{/if}}>
 <div class="styleguide-header">
   <div class="container">
-    <h1><a href="index.html">Real Change <span>Styleguide</span></a></h1>
+    <h1><a href="index.html">Real Help <span>Styleguide</span></a></h1>
   </div>
 </div>
 
