--- a/templates/src/pages/index.hbs
+++ b/templates/src/pages/index.hbs
@@ -6,15 +6,15 @@ layout: styleguide
 
   <nav class="breadcrumb" aria-label="breadcrumbs">
     <ul>
-      <li><a href="index.html">Real Change</a></li>
+      <li><a href="index.html">Real Help</a></li>
       <li class="active">Styleguide</li>
     </ul>
   </nav>
 
   <section class="styleguide-section">
     <div class="styleguide-intro">
-      <h1>Real Change Styleguide</h1>
-      <p>Components and Pages that are used to make up a Real Change website.</p>
+      <h1>Real Help Styleguide</h1>
+      <p>Components and Pages that are used to make up a Real Help website.</p>
     </div>
   </section>
 
