--- a/templates/src/pages/styleguide-footer.hbs
+++ b/templates/src/pages/styleguide-footer.hbs
@@ -6,7 +6,7 @@ layout: styleguide
 
   <nav class="breadcrumb" aria-label="breadcrumb">
     <ul>
-      <li><a href="index.html">Real Change</a></li>
+      <li><a href="index.html">Real Help</a></li>
       <li><a href="index.html#Components">Components</a></li>
       <li class="active"><a href="styleguide-footer.html" aria-current="page">Footer</a></li>
     </ul>
