--- a/templates/src/pages/styleguide-typography.hbs
+++ b/templates/src/pages/styleguide-typography.hbs
@@ -6,7 +6,7 @@ layout: styleguide
 
   <nav class="breadcrumb" aria-label="breadcrumb">
     <ul>
-      <li><a href="index.html">Real Change</a></li>
+      <li><a href="index.html">Real Help</a></li>
       <li><a href="index.html#Components">Components</a></li>
       <li class="active"><a href="styleguide-typography.html" aria-current="page">Typography</a></li>
     </ul>
@@ -15,7 +15,7 @@ layout: styleguide
   <section class="styleguide-section">
     <div class="styleguide-intro">
       <h1>Typography</h1>
-      <p>Examples for Real Change typography, headings, body text, lists...</p>
+      <p>Examples for Real Help typography, headings, body text, lists...</p>
     </div>
   </section>
 
