Remove Decor and Edges

--- a/templates/src/pages/page-casestudy.hbs
+++ b/templates/src/pages/page-casestudy.hbs
@@ -3,11 +3,11 @@ title: "Jack’s Story"
 layout: default
 ---
 {{> header
-  header__classes="decor decor-bottom decor-rc-sunny"
+  header__classes=""
   header__style="background-image: url(assets/uploads/header-worldcap.jpg);"
   header__nav=true
   header__hero=true
-  header__hero__text='Real Change in Wigan &amp; Leigh <strong> Jack’s Story</strong>'
+  header__hero__text='Real Help in Wigan &amp; Leigh <strong> Jack’s Story</strong>'
 }}
 
 <div id="main">
@@ -40,7 +40,7 @@ layout: default
     </div>
   </article>
 
-  <section class="section bg-rc-dive pre-footer-withcityscape edge edge-top edge-rc-dive-top">
+  <section class="section">
     <div class="container">
       <div class="content">
         <h3>{{> icon-like icon-like__height="44" icon-like__width="44" }} The real change you made</h3>
@@ -51,4 +51,4 @@ layout: default
   </section>
 </div>
 
-{{> footer footer__bodyorlogo="true" footer__body="true" footer__logo="true" footer__classes="footer-withcityscape" }}
+{{> footer footer__bodyorlogo="true" footer__body="true" footer__logo="true" footer__classes="" }}
