--- a/templates/src/pages/page-getinvolved.hbs
+++ b/templates/src/pages/page-getinvolved.hbs
@@ -4,7 +4,7 @@ layout: default
 header_nav_getinvolved: true
 ---
 {{> header
-  header__classes="decor decor-bottom decor-rc-sunny"
+  header__classes=""
   header__style=false
   header__nav=true
   header__hero=true
@@ -23,7 +23,7 @@ header_nav_getinvolved: true
     </div>
   </div>
 
-  <section class="section bg-rc-sunny pre-footer-withcityscape edge edge-top edge-rc-sunny-top">
+  <section class="section">
     <div class="container">
       <div class="content">
         <h2>Section title</h2>
@@ -42,4 +42,4 @@ header_nav_getinvolved: true
   </section>
 </div>
 
-{{> footer footer__bodyorlogo="true" footer__body="true" footer__logo="true" footer__classes="footer-withcityscape" }}
+{{> footer footer__bodyorlogo="true" footer__body="true" footer__logo="true" footer__classes="" }}
