--- a/templates/src/pages/page-howtoapply.hbs
+++ b/templates/src/pages/page-howtoapply.hbs
@@ -4,7 +4,7 @@ layout: default
 header_nav_howtoapply: true
 ---
 {{> header
-  header__classes="decor decor-bottom decor-rc-sunny"
+  header__classes=""
   header__style=false
   header__nav=true
   header__hero=true
@@ -41,7 +41,7 @@ header_nav_howtoapply: true
     </div>
   </div>
 
-  <section class="section bg-rc-sunny pre-footer-withcityscape edge edge-top edge-rc-sunny-top">
+  <section class="section">
     <div class="container">
       <div class="content">
         <h3>{{> icon-book-bag icon-book-bag__height="44" icon-book-bag__width="44" }} Want to become a Partner?</h3>
@@ -51,4 +51,4 @@ header_nav_howtoapply: true
   </section>
 </div>
 
-{{> footer footer__bodyorlogo="true" footer__body="true" footer__logo="true" footer__classes="footer-withcityscape" }}
+{{> footer footer__bodyorlogo="true" footer__body="true" footer__logo="true" footer__classes="" }}
