--- a/templates/src/pages/page-privacy.hbs
+++ b/templates/src/pages/page-privacy.hbs
@@ -3,7 +3,7 @@ title: "Privacy Policy"
 layout: default
 ---
 {{> header
-  header__classes="decor decor-bottom decor-rc-sunny"
+  header__classes=""
   header__nav=true
   header__hero=true
   header__hero__text='Privacy Policy'
@@ -25,7 +25,7 @@ layout: default
     </div>
   </div>
 
-  <section class="section bg-rc-dive pre-footer-withcityscape edge edge-top edge-rc-dive-top">
+  <section class="section">
     <div class="container">
       <div class="content">
         <h3>{{> icon-book-bag icon-book-bag__height="44" icon-book-bag__width="44" }} Want to become a Partner?</h3>
@@ -35,4 +35,4 @@ layout: default
   </section>
 </div>
 
-{{> footer footer__bodyorlogo="true" footer__body="true" footer__logo="true" footer__classes="footer-withcityscape" }}
+{{> footer footer__bodyorlogo="true" footer__body="true" footer__logo="true" footer__classes="" }}
