--- a/templates/src/pages/styleguide-boxed.hbs
+++ b/templates/src/pages/styleguide-boxed.hbs
@@ -16,13 +16,13 @@ layout: styleguide
     <div class="styleguide-intro">
       <h1>Boxed</h1>
       <p>Boxed is a simple element for containing content, think bootstrap .card</p>
-      <p>The sole duty of .boxed is to give an element padding and something you can apply background color and/or decor edges.</p>
+      <p>The sole duty of .boxed is to give an element padding and something you can apply background color.</p>
     </div>
   </section>
 
   <section class="styleguide-section">
     <div class="styleguide-example">
-      <div class="boxed bg-rc-candy">
+      <div class="boxed bg-primary">
         <div class="boxed-inner">
           <h2>Boxed h2</h2>
           <p>Boxed paragraph, lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -31,31 +31,12 @@ layout: styleguide
       </div>
     </div>
     <div class="styleguide-code">
-      <pre><code>&#x3C;div class=&#x22;boxed bg-rc-candy&#x22;&#x3E;
+      <pre><code>&#x3C;div class=&#x22;boxed bg-primary&#x22;&#x3E;
   &#x3C;div class=&#x22;boxed-inner&#x22;&#x3E;
     ...
   &#x3C;/div&#x3E;
 &#x3C;/div&#x3E;</code></pre>
     </div>
-
-    <h2 class="styleguide-h2">Boxed with decor edges</h2>
-    <div class="styleguide-example">
-      <div class="boxed edges bg-rc-candy">
-        <div class="boxed-inner">
-          <h2>Boxed h2</h2>
-          <p>Boxed paragraph, lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-          <a class="button button-primary d-block" href="#">Block button in boxed</a>
-        </div>
-      </div>
-    </div>
-    <div class="styleguide-code">
-      <pre><code>&#x3C;div class=&#x22;boxed edges bg-rc-candy&#x22;&#x3E;
-  &#x3C;div class=&#x22;boxed-inner&#x22;&#x3E;
-    ...
-  &#x3C;/div&#x3E;
-&#x3C;/div&#x3E;</code></pre>
-    </div>
-
 
     <h2 class="styleguide-h2">Boxed Colors</h2>
     <p>You can apply any of the color modifiers for .boxed</p>
@@ -67,73 +48,10 @@ layout: styleguide
           <a class="button button-primary" href="#">Button</a>
         </div>
       </div>
-      <div class="boxed bg-rc-aubergine">
+      <div class="boxed bg-rh-yellow">
         <div class="boxed-inner">
           <h2>Boxed</h2>
-          <p>This box is .boxed.bg-rc-aubergine - this is a <a href="#">link</a></p>
-          <a class="button button-primary" href="#">Button</a>
-        </div>
-      </div>
-      <div class="boxed bg-rc-candy">
-        <div class="boxed-inner">
-          <h2>Boxed</h2>
-          <p>This box is .boxed.bg-rc-candy - this is a <a href="#">link</a></p>
-          <a class="button button-primary" href="#">Button</a>
-        </div>
-      </div>
-      <div class="boxed bg-rc-flame">
-        <div class="boxed-inner">
-          <h2>Boxed</h2>
-          <p>This box is .boxed.bg-rc-flame - this is a <a href="#">link</a></p>
-          <a class="button button-primary" href="#">Button</a>
-        </div>
-      </div>
-      <div class="boxed bg-rc-spark">
-        <div class="boxed-inner">
-          <h2>Boxed</h2>
-          <p>This box is .boxed.bg-rc-spark - this is a <a href="#">link</a></p>
-          <a class="button button-primary" href="#">Button</a>
-        </div>
-      </div>
-      <div class="boxed bg-rc-sunny">
-        <div class="boxed-inner">
-          <h2>Boxed</h2>
-          <p>This box is .boxed.bg-rc-sunny - this is a <a href="#">link</a></p>
-          <a class="button button-primary" href="#">Button</a>
-        </div>
-      </div>
-      <div class="boxed bg-rc-sage">
-        <div class="boxed-inner">
-          <h2>Boxed</h2>
-          <p>This box is .boxed.bg-rc-sage - this is a <a href="#">link</a></p>
-          <a class="button button-primary" href="#">Button</a>
-        </div>
-      </div>
-      <div class="boxed bg-rc-moss">
-        <div class="boxed-inner">
-          <h2>Boxed</h2>
-          <p>This box is .boxed.bg-rc-moss - this is a <a href="#">link</a></p>
-          <a class="button button-primary" href="#">Button</a>
-        </div>
-      </div>
-      <div class="boxed bg-rc-dream">
-        <div class="boxed-inner">
-          <h2>Boxed</h2>
-          <p>This box is .boxed.bg-rc-dream - this is a <a href="#">link</a></p>
-          <a class="button button-primary" href="#">Button</a>
-        </div>
-      </div>
-      <div class="boxed bg-rc-dive">
-        <div class="boxed-inner">
-          <h2>Boxed</h2>
-          <p>This box is .boxed.bg-rc-dive - this is a <a href="#">link</a></p>
-          <a class="button button-primary" href="#">Button</a>
-        </div>
-      </div>
-      <div class="boxed bg-rc-blue">
-        <div class="boxed-inner">
-          <h2>Boxed</h2>
-          <p>This box is .boxed.bg-rc-blue - this is a <a href="#">link</a></p>
+          <p>This box is .boxed.bg-rh-yellow - this is a <a href="#">link</a></p>
           <a class="button button-primary" href="#">Button</a>
         </div>
       </div>
