--- a/templates/src/pages/page-content.hbs
+++ b/templates/src/pages/page-content.hbs
@@ -3,7 +3,7 @@ title: "Content"
 layout: default
 ---
 {{> header
-  header__classes="decor decor-bottom decor-rc-sunny"
+  header__classes=""
   header__nav=true
   header__hero=true
   header__hero__text='Content Page'
@@ -14,7 +14,7 @@ layout: default
     <div class="container">
       <div class="content">
         <h1>Content Page</h1>
-        <p class="body-lg">This is the Real Change Privacy Policy.</p>
+        <p class="body-lg">This is the Real Help Privacy Policy.</p>
         <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -29,14 +29,14 @@ layout: default
     </div>
   </div>
 
-  <section class="section bg-rc-dive pre-footer-withcityscape edge edge-top edge-rc-dive-top">
+  <section class="section">
     <div class="container">
       <div class="content">
         <h3>{{> icon-book-bag icon-book-bag__height="44" icon-book-bag__width="44" }} Want to become a Partner?</h3>
-        <p>If your organisation provides a service to support people who are homeless in Wigan & Leigh and you would like to discuss how to become an approved Real Change partner please contact the Real Change Secretary on <strong><a href="#">0000 000 000</a></strong> or email <strong><a href="#">realchange@realchange.com</a></strong></p>
+        <p>If your organisation provides a service to support people who are homeless in Wigan & Leigh and you would like to discuss how to become an approved Real Help partner please contact the Real Change Secretary on <strong><a href="#">0000 000 000</a></strong> or email <strong><a href="#">realchange@realchange.com</a></strong></p>
       </div>
     </div>
   </section>
 </div>
 
-{{> footer footer__bodyorlogo="true" footer__body="true" footer__logo="true" footer__classes="footer-withcityscape" }}
+{{> footer footer__bodyorlogo="true" footer__body="true" footer__logo="true" footer__classes="" }}
