--- a/templates/src/pages/page-home.hbs
+++ b/templates/src/pages/page-home.hbs
@@ -4,7 +4,7 @@ layout: default
 header_nav_home: true
 ---
 {{> header
-  header__classes="home-header decor decor-bottom decor-rc-sunny"
+  header__classes="home-header"
   header__style=false
   header__nav=true
   header__hero=true
@@ -14,7 +14,7 @@ header_nav_home: true
 <div id="main">
   <section class="section home-intro">
     <div class="container">
-      <div class="boxed edges bg-rc-sunny home-intro-whatis">
+      <div class="boxed home-intro-whatis">
         <div class="boxed-inner">
           <h2>What is Real Change?</h2>
           <p><strong>Real Change pays for practical items individuals need to build independent lives away from the streets.</strong></p>
@@ -26,14 +26,14 @@ header_nav_home: true
         </div>
       </div>
       <div class="home-intro-split">
-        <div class="boxed edges bg-rc-dive home-intro-who">
+        <div class="boxed bg-rh-black home-intro-who">
           <div class="boxed-inner">
             <h2>Who does Real Change help?</h2>
             <p><strong>The Real Change fund supports individuals who are homeless by paying for items they need -</strong> a deposit for a home, a training course, clothes for a job interview, furnishing for a new flat, or travel costs.</p>
             <p><a href="#">Find out more about how Real Change works and how the money is spent.</a></p>
           </div>
         </div>
-        <div class="boxed edges bg-rc-spark home-intro-apply">
+        <div class="boxed bg-rh-black home-intro-apply">
           <div class="boxed-inner">
             <h2>How can you apply?</h2>
             <p>If your organisation provides a service to support people who are homeless in Wigan &amp; Leigh and you would like to discuss how to become an approved Real Change partner please contact the Real Change Secretary on <a href="#">0000 000 000</a> or email <a href="#">xxxxxx@realchange.co.uk </a> or <a href="#">find out more here</a>. </p>
@@ -43,22 +43,22 @@ header_nav_home: true
     </div>
   </section>
 
-  <section class="section home-stories bg-rc-aubergine edge edge-top edge-rc-aubergine-top">
+  <section class="section home-stories">
     <div class="container">
       <div class="home-stories-header">
-        <h2 class="h1 home-stories-title bg-rc-sunny">56 people helped so far in Wigan &amp; Leigh</h2>
+        <h2 class="h1 home-stories-title">56 people helped so far in Wigan &amp; Leigh</h2>
       </div>
       <div class="home-stories-body">
         <div class="card-story card-stroy-witharrow">
           <h3 class="card-story-title">“Real change helped me make a real difference”</h3>
-          <div class="card-story-image aspect aspect-5by2 bg-rc-dream">
+          <div class="card-story-image aspect aspect-5by2">
             <img alt="" src="assets/uploads/story-jack-5by2.jpg">
           </div>
           <a class="card-story-cta" href="page-casestudy.html">Read Jack’s story</a>
         </div>
         <div class="card-story card-stroy-witharrow">
           <h3 class="card-story-title">“Real change helped me when I needed it most”</h3>
-          <div class="card-story-image aspect aspect-5by2 bg-rc-dream">
+          <div class="card-story-image aspect aspect-5by2">
             <img alt="" src="assets/uploads/story-danny-5by2.jpg">
           </div>
           <a class="card-story-cta" href="page-casestudy.html">Read Danny’s story</a>
@@ -70,7 +70,7 @@ header_nav_home: true
     </div>
   </section>
 
-  <section class="section bg-rc-dive home-partners pre-footer-withcityscape edge edge-top edge-rc-dive-top">
+  <section class="section home-partners">
     <div class="container">
       <div class="home-partners-header">
         <h2 class="h1 home-partners-title">{{> icon-like icon-like__height="44" icon-like__width="44" }} Help from our Partners</h2>
@@ -110,4 +110,4 @@ header_nav_home: true
   </section>
 </div>
 
-{{> footer footer__bodyorlogo="true" footer__body="true" footer__logo="true" footer__classes="footer-withcityscape" }}
+{{> footer footer__bodyorlogo="true" footer__body="true" footer__logo="true" footer__classes="" }}
