--- a/templates/src/pages/page-howitworks.hbs
+++ b/templates/src/pages/page-howitworks.hbs
@@ -4,7 +4,7 @@ layout: default
 header_nav_howitworks: true
 ---
 {{> header
-  header__classes="decor decor-bottom decor-rc-sunny"
+  header__classes=""
   header__style=false
   header__nav=true
   header__hero=true
@@ -21,7 +21,7 @@ header_nav_howitworks: true
     </div>
   </div>
 
-  <div class="section bg-rc-sunny edge edge-top edge-rc-sunny-top">
+  <div class="section">
     <div class="container">
       <div class="content">
         <div class="howitworks-stats">
@@ -63,28 +63,28 @@ header_nav_howitworks: true
     </div>
   </div>
 
-  <section class="section bg-rc-dive pre-footer-withcityscape edge edge-top edge-rc-dive-top">
+  <section class="section">
     <div class="container">
       <div class="content">
         <h3>{{> icon-checked icon-checked__height="44" icon-checked__width="44" }}  How will my donation be spent?</h3>
         <p>Your donation joins the central Real Change funding pot. <strong><a href="#">Local charities</a></strong> and organisations work directly with individuals who are homeless, and apply for funds to pay for items they need. Depending on the amount needed, there are two levels of fund requests:</p>
         <div class="cards cards-2up">
           <div class="card bg-white">
-            <div class="card-header bg-rc-spark text-white edges edges-nobottom edges-rc-dive">
+            <div class="card-header bg-rh-black text-white">
               <h3 class="card-title">Under £100</h3>
               <p><strong>(e.g. Education or training courses, furniture or househould items, clothes for interviews)</strong></p>
             </div>
-            <div class="card-body edges edges-notop edges-rc-dive">
+            <div class="card-body">
               <p>If the request is for under £100, Real Change partner agencies can submit an online application.</p>
               <p>This excludes cash, emergency accommodation, food or other items which are available for free elsewhere.</p>
             </div>
           </div>
           <div class="card bg-white">
-            <div class="card-header bg-rc-spark text-white edges edges-nobottom edges-rc-dive">
+            <div class="card-header bg-rh-black text-white">
               <h3 class="card-title">Over £100</h3>
               <p><strong>(e.g. Deposit or rent, furnishings for a flat, white goods over £100)</strong></p>
             </div>
-            <div class="card-body edges edges-notop edges-rc-dive">
+            <div class="card-body">
               <p>If the request is for over £100, the application must be agreed by the Real Change panel.</p>
               <p>The Real Change panel includes: Lorem ipsum dolor sit amet, lorem ipsum dolor sit amet, lorem ipsum dolor sti amet.</p>
             </div>
@@ -98,4 +98,4 @@ header_nav_howitworks: true
   </section>
 </div>
 
-{{> footer footer__bodyorlogo="true" footer__body="true" footer__logo="true" footer__classes="footer-withcityscape" }}
+{{> footer footer__bodyorlogo="true" footer__body="true" footer__logo="true" footer__classes="" }}
