--- a/templates/src/pages/page-stories.hbs
+++ b/templates/src/pages/page-stories.hbs
@@ -4,7 +4,7 @@ layout: default
 header_nav_casestudies: true
 ---
 {{> header
-  header__classes="decor decor-bottom decor-rc-sunny"
+  header__classes=""
   header__style=false
   header__nav=true
   header__hero=true
@@ -20,29 +20,29 @@ header_nav_casestudies: true
     </div>
   </div>
 
-  <section class="section home-stories bg-rc-aubergine edge edge-top edge-rc-aubergine-top">
+  <section class="section home-stories">
     <div class="container">
       <div class="home-stories-header">
-        <h2 class="h1 home-stories-title bg-rc-sunny">56 people helped so far in Wigan &amp; Leigh</h2>
+        <h2 class="h1 home-stories-title">56 people helped so far in Wigan &amp; Leigh</h2>
       </div>
       <div class="home-stories-body">
         <div class="card-story card-stroy-witharrow">
           <h3 class="card-story-title">“Real change helped me make a real difference”</h3>
-          <div class="card-story-image aspect aspect-5by2 bg-rc-dream">
+          <div class="card-story-image aspect aspect-5by2">
             <img alt="" src="assets/uploads/story-jack-5by2.jpg">
           </div>
           <a class="card-story-cta" href="page-casestudy.html">Read Jack’s story</a>
         </div>
         <div class="card-story card-stroy-witharrow">
           <h3 class="card-story-title">“Real change helped me when I needed it most”</h3>
-          <div class="card-story-image aspect aspect-5by2 bg-rc-dream">
+          <div class="card-story-image aspect aspect-5by2">
             <img alt="" src="assets/uploads/story-danny-5by2.jpg">
           </div>
           <a class="card-story-cta" href="page-casestudy.html">Read Danny’s story</a>
         </div>
         <div class="card-story card-stroy-witharrow">
           <h3 class="card-story-title">“Real change helped me make a real difference”</h3>
-          <div class="card-story-image aspect aspect-5by2 bg-rc-dream">
+          <div class="card-story-image aspect aspect-5by2">
             <img alt="" src="assets/uploads/story-jack-5by2.jpg">
           </div>
           <a class="card-story-cta" href="page-casestudy.html">Read Jack’s story</a>
@@ -55,4 +55,4 @@ header_nav_casestudies: true
   </section>
 </div>
 
-{{> footer footer__bodyorlogo="true" footer__body="true" footer__logo="true" footer__classes="footer-withcityscape" }}
+{{> footer footer__bodyorlogo="true" footer__body="true" footer__logo="true" footer__classes="" }}
